fix menu z-index

--- a/client/src/ui/ConsoleLayout/components/ConsoleMenu/ConsoleMenu.module.css
+++ b/client/src/ui/ConsoleLayout/components/ConsoleMenu/ConsoleMenu.module.css
@@ -9,7 +9,7 @@
   transition: width 300ms;
   overflow: hidden;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 12px 29px 0px;
-  z-index: 9999;
+  z-index: 50;
 }
 
 .menuWrapperHidden {
