--- a/client/src/ui/Layout/components/AppMenu/AppMenu.module.css
+++ b/client/src/ui/Layout/components/AppMenu/AppMenu.module.css
@@ -14,7 +14,7 @@
     transform 200ms,
     visibility 200ms;
   visibility: hidden;
-  z-index: 100;
+  z-index: 300;
 }
 
 .openAppMenu {
