--- a/client/src/ui/Modal/Modal.module.css
+++ b/client/src/ui/Modal/Modal.module.css
@@ -4,6 +4,6 @@
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 9999;
+  z-index: 200;
   padding: 30px;
 }
